# photoshell

./: .gitignore  CMakeLists.txt  README.md  \  linux-build.sh  todo.md
core/: CMakeLists.txt
core/include/: application.h  argument.h  arguments.h  command.h  core.h  entryparam.h  error.h  errors.h  foo.h  image-tga.h  image.h  tests.h
core/include/base/: string.h  types.h
core/src/: application.c  argument.c  arguments.c  command.c  entryparam.c  entrypoint.c  error.c  foo.c  image-tga.c  image.c  string.c  tests.c
core/src/entryparam/: entryparam.c  entryparam.h
photoshell/: CMakeLists.txt
photoshell/src/: terminal.c
